--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-cli": "^1.0.0-beta.28.3",
     "apollo-angular": "^0.13.0",
     "apollo-client": "^1.9.1",
     "core-js": "^2.4.1",
